Fix sidebar content overflow

--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,7 @@ Azure - CEDFD9
 .sidebar {
   display: grid;
   grid-template-rows: 2fr 1fr 1fr;
+  height: 100svh;
 }
 
 .contact-information-form {
